# hivefi-strategy-factory-template

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  STRATEGY_STATUS.md  WORKFLOW.md  pyproject.toml
.agents/skills/backtest-diag/: SKILL.md
.agents/skills/job-error-debug/: SKILL.md
.agents/skills/submit-flow/: SKILL.md
.claude/skills/empirical-prompt-tuning/: SKILL.md
.claude/skills/factor-research/: SKILL.md
.claude/skills/market-research/: SKILL.md
.claude/skills/strategy-scaffold-from-paper/: SKILL.md
.claude/skills/symphony/: SKILL.md
.github/workflows/: ci.yml
configs/: demo-momentum-D-W-hl-all-ls-v2.json  example-mom-D-W-hl-btc-ls-v2.json
docs/: SETUP_GUIDE.md  false-positive-control.md
extensions/: demo-momentum-D-W-hl-all-ls-v2.py  example-mom-D-W-hl-btc-ls-v2.py
src/hivefi_factory/: __init__.py  __main__.py  cli.py  cli_entry.py  clickhouse.py  client.py  config.py  data_requests.py  smoke.py  validator.py
tests/: e2e_onboarding.sh  test_client.py  test_data_requests.py  test_skills.py  test_validator.py
tools/: README.md  e2e_smoke_test.sh  katsustats_bt_report.py  refresh_strategy_status.py  refresh_task_status.py  run_strategy_pipeline.py
tools/symphony/: LINEAR_API_KEY.md  LOCAL_TASK_TEMPLATE.md  README.md  STRATEGY_BATCH_TEMPLATE.md  STRATEGY_REPORT_FORMAT.md  WORKFLOW_REVIEW_JA.md  bootstrap_codex_workspace.sh  check_data_access.sh  fetch_data_cached.py  strategy_batch.py
