[project]
name = "hivefi-strategy-factory"
version = "0.2.0"
description = "HiveFi strategy contest workspace (strategy factory for participants)"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "clickhouse-connect>=0.7",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "ipykernel>=6.29",
    "matplotlib>=3.8",
    "respx>=0.21",
]
analysis = [
    "katsustats>=0.6",
]

[project.scripts]
hivefi-factory = "hivefi_factory.cli_entry:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
